--- a/Scrumdinger.xcodeproj/xcshareddata/xcschemes/Scrumdinger.xcscheme
+++ b/Scrumdinger.xcodeproj/xcshareddata/xcschemes/Scrumdinger.xcscheme
@@ -33,6 +33,9 @@
             reference = "container:ScrumdingerUITests/TestPlan.xctestplan"
             default = "YES">
          </TestPlanReference>
+         <TestPlanReference
+            reference = "container:UITests.xctestplan">
+         </TestPlanReference>
       </TestPlans>
       <Testables>
          <TestableReference
