--- a/Scrumdinger.xcodeproj/xcshareddata/xcschemes/ScrumdingerUITests.xcscheme
+++ b/Scrumdinger.xcodeproj/xcshareddata/xcschemes/ScrumdingerUITests.xcscheme
@@ -37,6 +37,16 @@
       debugDocumentVersioning = "YES"
       debugServiceExtension = "internal"
       allowLocationSimulation = "YES">
+      <BuildableProductRunnable
+         runnableDebuggingMode = "0">
+         <BuildableReference
+            BuildableIdentifier = "primary"
+            BlueprintIdentifier = "8688108F2D5FB60800446F79"
+            BuildableName = "Scrumdinger.app"
+            BlueprintName = "Scrumdinger"
+            ReferencedContainer = "container:Scrumdinger.xcodeproj">
+         </BuildableReference>
+      </BuildableProductRunnable>
    </LaunchAction>
    <ProfileAction
       buildConfiguration = "Release"
@@ -44,6 +54,15 @@
       savedToolIdentifier = ""
       useCustomWorkingDirectory = "NO"
       debugDocumentVersioning = "YES">
+      <MacroExpansion>
+         <BuildableReference
+            BuildableIdentifier = "primary"
+            BlueprintIdentifier = "8688108F2D5FB60800446F79"
+            BuildableName = "Scrumdinger.app"
+            BlueprintName = "Scrumdinger"
+            ReferencedContainer = "container:Scrumdinger.xcodeproj">
+         </BuildableReference>
+      </MacroExpansion>
    </ProfileAction>
    <AnalyzeAction
       buildConfiguration = "Debug">
